update swagger annotations for POST and PUT methods
